css/style.css
/* Reset */
*{
    margin:0;
    padding:0;
    box-sizing: border-box;
}
html {
    scroll-behavior: smooth;
  }
/* Nav */
nav{
    position: fixed;
    top: 30px;
    right: 10px;
}
.circle{
    display: inline-block;
    background-color: white;
    color: black;
    font-size: 20px;
    font-weight: 800;
    border: 1px solid black;
    border-radius: 50%;
    width: 40px;
    height: 40px;
    text-align: center;
    line-height: 40px;
    margin: 0px 10px;
}
/* Text */
h1{
    text-transform: uppercase;
    margin: 0 auto;
    text-align: center;
    font-size: 50px;
}
/* Pics */
.pic{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    max-width: 600px;
}
img{
    width: 100%;
}
/* Sections */
#first{
    height: 100vh;
    background-color: red;
    color: yellow;
}
#second{
    height: 100vh;
    background-color: green;
    color: yellow;
}
#third{
    height: 100vh;
    background-color: yellow;
    color: green;
}

